// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard El comptador ha de funcionar correctament 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card 
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard Ha de mostrar el component de manera correcta 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card 
  </h1>
</div>
`;
